# desire

./: .gitignore  AGENTS.md  Cargo.toml  README.md
examples/: Cargo.toml  web.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs  middleware.rs
examples/hello/src/controller/: mod.rs
examples/hello/src/error/: mod.rs
examples/hello/src/middleware/: mod.rs
examples/hello/src/types/: mod.rs
src/: context.rs  error.rs  fs.rs  into_response.rs  kernel.rs  lib.rs  request.rs  response.rs  router.rs  server.rs  types.rs  utils.rs
