[package]
authors = [
  "siwilizhao <siwilizhao@gmail.com>",
] 
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
] 
description = "A minimal Rust web application framework" 
documentation = "https://docs.rs/desire" 
edition = "2024" 
keywords = ["desire", "http", "web", "framework", "async"] 
license = "Apache-2.0" 
name = "desire" 
publish = true # no accidents while in dev
readme = "README.md" 
repository = "https://github.com/desire-rs/desire" 
version = "0.0.1" 

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*", #"build.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = {version = "0.4.44", features = ["serde"]}
dotenv = "0.15.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = {version = "1.8.1", features = ["full"]}
mime = "0.3.17"
route-recognizer = "0.3.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
thiserror = "2.0.18"
tokio = {version = "1.50.0", features = ["full"]}
tracing = "0.1.44"
hyper-util = { version = "0.1.20", features = ["full"] }
[dev-dependencies]

[features]
# Nothing by default
default = []

# [lib]
# crate-type = ["dylib"]
